--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 #intro-container {
-    margin-top: 50%;
+    margin-top: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -88,11 +88,14 @@ img {
 #num-display {
     display: flex;
     justify-content: center;
-    font-size: 35px;
-    padding: 5px;
-    padding-top: 10px;
+    align-items: center;
+    height: 50px;
     color: white;
     text-shadow: 2px 2px black;
+}
+
+#number {
+    font-size: 35px;
 }
 
 #button-container {
