--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@
     box-sizing: border-box;
 }
 
-.hide{
+.hide {
     display: none !important;
 }
 
 body {
     background-color: #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .wrong {
@@ -28,7 +29,7 @@ body {
     flex-direction: column;
     padding: 20px;
     text-align: center;
-    
+
 }
 
 #introduction {
@@ -53,10 +54,11 @@ body {
 
 
 header {
-    background-color: azure;
+    background-color: lightgray;
     padding: 10px;
     display: flex;
     justify-content: center;
+
 }
 
 #image-container {
@@ -65,6 +67,7 @@ header {
     margin: 0 auto;
     padding: 20px;
 }
+
 img {
     width: 100%;
     height: 30vh;
@@ -108,16 +111,16 @@ img {
     grid-template-rows: repeat(5, 1fr);
     column-gap: 2px;
     row-gap: 2px;
-    grid-template-areas: 
-    "void clear clear"
-    "seven eight nine"
-    "four five six"
-    "one two three"
-    "zero zero enter";
+    grid-template-areas:
+        "void clear clear"
+        "seven eight nine"
+        "four five six"
+        "one two three"
+        "zero zero enter";
 }
 
 .btn {
-    background-color:#F2F3F0;
+    background-color: #F2F3F0;
     font-size: 20px;
 }
 
@@ -136,38 +139,49 @@ img {
 #seven {
     grid-area: seven;
 }
-#eight{
-    grid-area: eight; 
+
+#eight {
+    grid-area: eight;
 }
-#nine{
-    grid-area: nine; 
+
+#nine {
+    grid-area: nine;
 }
-#four{
-    grid-area: four; 
+
+#four {
+    grid-area: four;
 }
-#five{
-    grid-area: five; 
+
+#five {
+    grid-area: five;
 }
-#six{
-    grid-area: six; 
+
+#six {
+    grid-area: six;
 }
-#one{
-    grid-area: one; 
+
+#one {
+    grid-area: one;
 }
-#two{
-    grid-area: two; 
+
+#two {
+    grid-area: two;
 }
-#three{
-    grid-area: three; 
+
+#three {
+    grid-area: three;
 }
+
 #zero {
     grid-area: zero;
 }
+
 #enter {
     grid-area: enter;
     background-color: #F4EE6B;
     font-size: 16px;
 }
+
 #enter:hover {
     background-color: yellow;
 }
@@ -176,9 +190,9 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-   flex-direction: column;
-   text-align: center;
-   padding: 20px;
+    flex-direction: column;
+    text-align: center;
+    padding: 20px;
     background-color: white;
     margin: 40px;
     border-radius: 15px;
@@ -187,7 +201,7 @@ img {
 #summary-header {
     width: 100%;
     color: black;
-    font-size:30px;
+    font-size: 30px;
     padding: 10px;
 }
 
